2014-11-07  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.14.0-rc2 Released.

2014-11-06 09:05 +0000 [r427381]  Corey Farrell <git@cfware.com>

	* Fix unintential memory retention in stringfields.

	  * Fix missing / unreachable calls to
	    __ast_string_field_release_active.
	  * Reset pool->used to zero when the current pool->active reaches
	    zero.

	ASTERISK-24307 #close
	Reported by: Etienne Lessard
	Tested by: ibercom, Etienne Lessard
	Review: https://reviewboard.asterisk.org/r/4114/

2014-11-03  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 11.14.0-rc1 Released.

2014-11-03 02:31 +0000 [r427019-427087]  Corey Farrell <git@cfware.com>

	* apps/app_voicemail.c: Fix compile error caused by review 4138
	  There is no procedure called ast_closeframe, fix code to use
	  ast_closestream. Reported By: Matt Jordan

	* apps/app_voicemail.c, /, main/app.c: Fix ast_writestream leaks
	  Fix cleanup in __ast_play_and_record where others[x] may be
	  leaked. This was caught where prepend != NULL && outmsg != NULL,
	  once realfile[x] == NULL any further others[x] would be leaked. A
	  cleanup block was also added for prepend != NULL && outmsg ==
	  NULL. 11+: Fix leak of ast_writestream recording_fs in
	  app_voicemail:leave_voicemail. ASTERISK-24476 #close Reported by:
	  Corey Farrell Review: https://reviewboard.asterisk.org/r/4138/
	  ........ Merged revisions 427023 from
	  http://svn.asterisk.org/svn/asterisk/branches/1.8

	* funcs/func_jitterbuffer.c, main/abstract_jb.c: func_jitterbuffer:
	  fix frame leaks. Fix code paths where it is possible for frames
	  to leak. Fix uninitialized variable in jb_get_fixed and
	  jb_get_adaptive. ASTERISK-22409 #related Reported by: Corey
	  Farrell Review: https://reviewboard.asterisk.org/r/4128/

2014-10-31 16:40 +0000 [r426927-426931]  Tzafrir Cohen <tzafrir.cohen@xorcom.com>

	* Makefile, /: Fix syntax from commit r426927

	* Makefile, /: install init.d files on GNU/kFreeBSD Review: